tests/negative/lexical/invalid_binary_prefix/input.ci
void main() {
    print(toString(0b) + "\n");
}
